--- a/we are here.html
+++ b/we are here.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            color: white;
+            background-color: black;
+            font-size: 20px;
+            font-weight: bolder;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello World How re you doing ?</h1>
+     <h2>I am Working with something really helpful</h2>
 </body>
 </html>
